MailResources/css/style.css
html {
    margin: 0;
    padding: 0;
}

body {
    font-family: -apple-system;

    padding: 0;
    margin: 16px;

    width: auto !important;
    min-width: auto !important;
}

blockquote {
    padding: 0.2em 1.2em !important;
    margin: 0 !important;
    border: 3px solid var(--kmail-primary-color) !important;
    border-width: 0 0 0 2px !important;
}

blockquote blockquote blockquote blockquote {
    padding: 0 !important;
    border: none !important;
}

a:link, a:visited, a:hover, a:active {
    color: var(--kmail-primary-color);
}

pre {
    font-family: -apple-system;
}

/* on-screen styles */
@media screen {
  #printHeader {
      display: none;
  }
}

a[data-ik-mention-ref] {
  padding: 0 4px;
  border-radius: 100px;
  color: var(--mail-content-mention-text-color, #333);
  background-color: var(--mail-content-mention-background-color, #f1f1f1);
  font-weight: var(--mail-content-mention-font-weight, inherit);
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
    :root {
        --mail-content-mention-text-color: #fff;
        --mail-content-mention-background-color: #333;
    }
}

